@@ -1,0 +1,9 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+   <title>ZooKeeper</title>
+</head>
+<body>
+ZooKeeper is a service for coordinating processes of distributed applications.
+</body>
+</html>
